--- a/package.json
+++ b/package.json
@@ -22,23 +22,31 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "eslint": "eslint --max-warnings 0",
+    "lint": "eslint --max-warnings 0",
     "build": "tsc --build",
     "build:watch": "tsc --build --watch",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
+  "dependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.5.2",
-    "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-eslint-plugin": "^7.0.0",
     "eslint-plugin-import": "^2.32.0",
-    "globals": "^16.4.0",
-    "typescript": "^5.9.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.21",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "typescript-eslint": "^8.44.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.2",
+    "eslint": "^9.26.0",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.0",
+    "@types/node": "^24.5.2",
+    "globals": "^16.4.0"
   },
   "peerDependencies": {
     "eslint": ">=9.26.0"
