--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     },
     "types": ["node"],
     "sourceMap": false,
-    "declarationMap": false
+    "declarationMap": false,
+    "allowJs": true
   },
 
   "watchOptions": {
@@ -29,5 +30,5 @@
     "excludeDirectories": ["**/node_modules"],
     "excludeFiles": []
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src", "eslint.config.js"]
 }
