[LIST-980] Switch base config to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "excludeDirectories": ["**/node_modules"],
     "excludeFiles": []
   },
-  "include": ["src", "eslint.config.js"]
+  "include": ["src"]
 }
