--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "typescript-eslint": "^8.44.1"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "eslint": "^9.26.0",
     "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@types/node": "^24.5.2",
-    "globals": "^16.4.0"
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
+    "typescript": "^5.9.2"
   },
   "peerDependencies": {
     "eslint": ">=9.26.0"
