--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "scripts": {
     "lint": "eslint --max-warnings 0",
     "build": "tsc --build",
+    "clean": "rimraf dist",
+    "build:clean": "pnpm clean && pnpm build",
     "build:watch": "tsc --build --watch",
-    "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -46,6 +47,7 @@
     "@types/node": "^24.5.2",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
