--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "module": "esnext",
+    "module": "NodeNext",
     "esModuleInterop": true,
-    "target": "es2020",
+    "target": "ES2022",
     "noImplicitAny": true,
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "outDir": "dist",
     "baseUrl": ".",
     "declaration": true,
     "paths": {
       "*": ["node_modules/*"]
     },
+    "lib": ["ES2022"],
     "types": ["node"],
     "sourceMap": false,
     "declarationMap": false,
