--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-react-you-might-not-need-an-effect": "^0.5.4",
     "eslint-plugin-tsdoc": "^0.4.0",
     "typescript-eslint": "^8.45.0"
   },
