--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "eslint-plugin-react-refresh": "^0.4.23",
     "eslint-plugin-react-you-might-not-need-an-effect": "^0.5.5",
     "eslint-plugin-tsdoc": "^0.4.0",
-    "typescript-eslint": "^8.45.0"
+    "typescript-eslint": "^8.45.0",
+    "globals": "^16.4.0"
   },
   "devDependencies": {
     "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@types/node": "^24.6.2",
     "eslint": "^9.36.0",
-    "globals": "^16.4.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.9.3"
   },
